[java223] Documentation + very slight syntaxic retouching
(On dilyanpalauzov suggestion)
Signed-off-by: Gwendal Roulleau <gwendal.roulleau@gmail.com>